--- a/RSWEB_university_project/Views/Courses/Edit.cshtml
+++ b/RSWEB_university_project/Views/Courses/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model RSWEB_university_project.ViewModels.EnrollmentEditVM
+﻿@model RSWEB_university_project.Models.Course
 
 
 @{
@@ -13,41 +13,45 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Course.CourseID" />
+            <input type="hidden" asp-for="CourseID" />
             <div class="form-group">
-                <label asp-for="Course.Title" class="control-label"></label>
-                <input asp-for="Course.Title" class="form-control" />
-                <span asp-validation-for="Course.Title" class="text-danger"></span>
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Course.Credits" class="control-label"></label>
-                <input asp-for="Course.Credits" class="form-control" />
-                <span asp-validation-for="Course.Credits" class="text-danger"></span>
+                <label asp-for="Credits" class="control-label"></label>
+                <input asp-for="Credits" class="form-control" />
+                <span asp-validation-for="Credits" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Course.Semestar" class="control-label"></label>
-                <input asp-for="Course.Semestar" class="form-control" />
-                <span asp-validation-for="Course.Semestar" class="text-danger"></span>
+                <label asp-for="Semestar" class="control-label"></label>
+                <input asp-for="Semestar" class="form-control" />
+                <span asp-validation-for="Semestar" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Course.Programme" class="control-label"></label>
-                <input asp-for="Course.Programme" class="form-control" />
-                <span asp-validation-for="Course.Programme" class="text-danger"></span>
+                <label asp-for="Programme" class="control-label"></label>
+                <input asp-for="Programme" class="form-control" />
+                <span asp-validation-for="Programme" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Course.EducationLevel" class="control-label"></label>
-                <input asp-for="Course.EducationLevel" class="form-control" />
-                <span asp-validation-for="Course.EducationLevel" class="text-danger"></span>
+                <label asp-for="EducationLevel" class="control-label"></label>
+                <input asp-for="EducationLevel" class="form-control" />
+                <option>Select</option>
+                <option value="Junior">Junior</option>
+                <option value="Senior">Senior</option>
+                </select>
+                <span asp-validation-for="EducationLevel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Course.FirstTeacherId" class="control-label"></label>
-                <select asp-for="Course.FirstTeacherId" class="form-control" asp-items="ViewBag.FirstTeacherId"></select>
-                <span asp-validation-for="Course.FirstTeacherId" class="text-danger"></span>
+                <label asp-for="FirstTeacherId" class="control-label"></label>
+                <select asp-for="FirstTeacherId" class="form-control" asp-items="ViewBag.FirstTeacherId"></select>
+                <span asp-validation-for="FirstTeacherId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Course.SecondTeacherId" class="control-label"></label>
-                <select asp-for="Course.SecondTeacherId" class="form-control" asp-items="ViewBag.SecondTeacherId"></select>
-                <span asp-validation-for="Course.SecondTeacherId" class="text-danger"></span>
+                <label asp-for="SecondTeacherId" class="control-label"></label>
+                <select asp-for="SecondTeacherId" class="form-control" asp-items="ViewBag.SecondTeacherId"></select>
+                <span asp-validation-for="SecondTeacherId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
