--- a/RSWEB_university_project/Views/Courses/Index.cshtml
+++ b/RSWEB_university_project/Views/Courses/Index.cshtml
@@ -1,43 +1,55 @@
-﻿@model IEnumerable<RSWEB_university_project.Models.Course>
+﻿@model RSWEB_university_project.ViewModels.CoursesFilterVM
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Courses";
 }
 
-<h1>Index</h1>
+<h1>Courses</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-controller="Courses" asp-action="Index" method="get">
+    <p>
+        Semester: <select asp-for="SemestarInt" asp-items="Model.Semestars">
+            <option value="">All</option>
+        </select>
+        Programme: <select asp-for="ProgrammeString" asp-items="Model.Programmes">
+            <option value="">All</option>
+        </select>
+        Title: <input type="text" asp-for="TitleString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.Courses[0].Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Credits)
+                @Html.DisplayNameFor(model => model.Courses[0].Credits)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Semestar)
+                @Html.DisplayNameFor(model => model.Courses[0].Semestar)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Programme)
+                @Html.DisplayNameFor(model => model.Courses[0].Programme)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EducationLevel)
+                @Html.DisplayNameFor(model => model.Courses[0].EducationLevel)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstTeacher)
+                @Html.DisplayNameFor(model => model.Courses[0].FirstTeacher)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SecondTeacher)
+                @Html.DisplayNameFor(model => model.Courses[0].SecondTeacher)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Courses) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
@@ -55,12 +67,17 @@
                 @Html.DisplayFor(modelItem => item.EducationLevel)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstTeacher.FirstName)
+                <a asp-controller="Teachers" asp-action="Details" asp-route-id="@item.FirstTeacherId">
+                    @Html.DisplayFor(modelItem => item.FirstTeacher.FullName)
+                </a>
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SecondTeacher.FirstName)
+                <a asp-controller="Teachers" asp-action="Details" asp-route-id="@item.SecondTeacherId">
+                    @Html.DisplayFor(modelItem => item.SecondTeacher.FullName)
+                </a>
             </td>
             <td>
+                <a asp-controller="Enrollments" asp-action="enrollStudents" asp-route-id="@item.CourseID">Enroll Students</a>
                 <a asp-action="Edit" asp-route-id="@item.CourseID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.CourseID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.CourseID">Delete</a>
