--- a/RSWEB_university_project/Views/Enrollments/Details.cshtml
+++ b/RSWEB_university_project/Views/Enrollments/Details.cshtml
@@ -14,13 +14,17 @@
             @Html.DisplayNameFor(model => model.Course)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Course.Title)
+            <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.CourseID">
+                @Html.DisplayFor(model => model.Course.Title)
+            </a>
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Student)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Student.FirstName)
+        <dd class="col-sm-10">
+            <a asp-controller="Students" asp-action="Details" asp-route-id="@Model.StudentID">
+                @Html.DisplayFor(model => model.Student.FullName)
+            </a>
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Semestar)
@@ -85,6 +89,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.EnrollmentID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="getStudentsByCourse" asp-route-id="@ViewData["selectedCrs"]">Back</a>
 </div>
