--- a/RSWEB_university_project/Views/Courses/Details.cshtml
+++ b/RSWEB_university_project/Views/Courses/Details.cshtml
@@ -10,47 +10,61 @@
     <h4>Course</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Credits)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Credits)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Semestar)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Semestar)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Programme)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Programme)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EducationLevel)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.EducationLevel)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FirstTeacher)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstTeacher.FirstName)
+        <dd class="col-sm-10">
+            <a asp-controller="Teachers" asp-action="Details" asp-route-id="@Model.FirstTeacherId">
+                @Html.DisplayFor(modelItem => Model.FirstTeacher.FullName)
+            </a>
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SecondTeacher)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SecondTeacher.FirstName)
+        <dd class="col-sm-10">
+            <a asp-controller="Teachers" asp-action="Details" asp-route-id="@Model.SecondTeacherId">
+                @Html.DisplayFor(modelItem => Model.SecondTeacher.FullName)
+            </a>
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Students)
+        </dt>
+        <dd class="col-sm-10">
+            @foreach (var student in Model.Students)
+            {
+                <a asp-controller="Students" asp-action="Details" asp-route-id="@student.StudentID"> @student.Student.FullName </a>
+                <br />
+            }
         </dd>
     </dl>
 </div>
