--- a/RSWEB_university_project/Views/Enrollments/Edit.cshtml
+++ b/RSWEB_university_project/Views/Enrollments/Edit.cshtml
@@ -8,66 +8,90 @@
 
 <h4>Enrollment</h4>
 <hr />
-<div class="row">
+<dl class="row">
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Course)
+    </dt>
+    <dd class="col-sm-10">
+        <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.CourseID">
+            @Html.DisplayFor(model => model.Course.Title)
+        </a>
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Student)
+    </dt>
+    <dd class="col-sm-10">
+        <a asp-controller="Students" asp-action="Details" asp-route-id="@Model.StudentID">
+            @Html.DisplayFor(model => model.Student.FullName)
+        </a>
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Semestar)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Semestar)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Grade)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Grade)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Year)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Year)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.SeminalUrl)
+    </dt>
+    <dd class="col-sm-10">
+        @if (Model.SeminalUrl != null)
+        {
+            <a href="@("/seminals/" + Model.SeminalUrl)" target="_blank">
+                @Model.SeminalUrl
+            </a>
+        }
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.ProjectUrl)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.ProjectUrl)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.ExamPoints)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.ExamPoints)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.SeminalPoints)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.SeminalPoints)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.ProjectPoints)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.ProjectPoints)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.AdditionalPoints)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.AdditionalPoints)
+    </dd>
+    </dl>
+
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="EnrollmentID" />
-            <div class="form-group">
-                <label asp-for="CourseID" class="control-label"></label>
-                <select asp-for="CourseID" class="form-control" asp-items="ViewBag.CourseID"></select>
-                <span asp-validation-for="CourseID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="StudentID" class="control-label"></label>
-                <select asp-for="StudentID" class="form-control" asp-items="ViewBag.StudentID"></select>
-                <span asp-validation-for="StudentID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Semestar" class="control-label"></label>
-                <input asp-for="Semestar" class="form-control" />
-                <span asp-validation-for="Semestar" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Year" class="control-label"></label>
-                <input asp-for="Year" class="form-control" />
-                <span asp-validation-for="Year" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Grade" class="control-label"></label>
-                <input asp-for="Grade" class="form-control" />
-                <span asp-validation-for="Grade" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SeminalUrl" class="control-label"></label>
-                <input asp-for="SeminalUrl" class="form-control" />
-                <span asp-validation-for="SeminalUrl" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProjectUrl" class="control-label"></label>
-                <input asp-for="ProjectUrl" class="form-control" />
-                <span asp-validation-for="ProjectUrl" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ExamPoints" class="control-label"></label>
-                <input asp-for="ExamPoints" class="form-control" />
-                <span asp-validation-for="ExamPoints" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SeminalPoints" class="control-label"></label>
-                <input asp-for="SeminalPoints" class="form-control" />
-                <span asp-validation-for="SeminalPoints" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProjectPoints" class="control-label"></label>
-                <input asp-for="ProjectPoints" class="form-control" />
-                <span asp-validation-for="ProjectPoints" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AdditionalPoints" class="control-label"></label>
-                <input asp-for="AdditionalPoints" class="form-control" />
-                <span asp-validation-for="AdditionalPoints" class="text-danger"></span>
-            </div>
+
+
             <div class="form-group">
                 <label asp-for="FinishDate" class="control-label"></label>
                 <input asp-for="FinishDate" class="form-control" />
@@ -78,12 +102,12 @@
             </div>
         </form>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
+
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
