--- a/RSWEB_university_project/Views/Enrollments/Index.cshtml
+++ b/RSWEB_university_project/Views/Enrollments/Index.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<RSWEB_university_project.Models.Enrollment>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Enrollments";
 }
 
-<h1>Index</h1>
+<h1>Enrollments</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -52,50 +49,39 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Course.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Student.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Semestar)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Year)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Grade)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SeminalUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProjectUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ExamPoints)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SeminalPoints)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProjectPoints)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AdditionalPoints)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FinishDate)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.EnrollmentID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.EnrollmentID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.EnrollmentID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    <a asp-controller="Courses" asp-action="Details" asp-route-id="@item.CourseID">
+                        @Html.DisplayFor(modelItem => item.Course.Title)
+                    </a>
+                </td>
+                <td>
+                    <a asp-controller="Students" asp-action="Details" asp-route-id="@item.StudentID">
+                        @Html.DisplayFor(modelItem => item.Student.FullName)
+                    </a>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Semestar)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Grade)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Year)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FinishDate)
+                </td>
+                <td>
+                    @if (item.FinishDate == null)
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.EnrollmentID">Unenroll</a>
+                        <label>|</label>
+                    }
+                    <a asp-action="Delete" asp-route-id="@item.EnrollmentID">Delete</a>
+            </tr>
+        }
     </tbody>
 </table>
